<resources>
    <string name="app_name">JZYDocManager</string>
    <string name="navigation_title_homepage">首页</string>
    <string name="navigation_title_classification">分类</string>
    <string name="navigation_title_local_download">本地</string>
    <string name="navigation_title_user_center">我的</string>
    <string name="button_login">登 录</string>
    <string name="button_register">注 册</string>
    <string name="jzy_docManager_shared_preference_key">JZYDocManagerSharedPreferenceKey</string>
    <string name="upload">上传</string>
    <string name="text_enter_title">请输入文档标题</string>
    <string name="text_choose_upload_to">请选择上传到</string>
    <string name="text_classification">分类</string>
    <string name="title_upload_file">上传文件</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="message_upload_complete">上传完成</string>
    <string name="message_download_complete">下载完成</string>
    <string name="text_college">大学</string>
    <string name="text_school">中小学</string>
    <string name="text_workplace">职场</string>
    <string name="text_economy">经济</string>
    <string name="text_IT">计算机</string>
    <string name="text_science">科学</string>
    <string name="text_health">健康</string>
    <string name="text_culture">人文</string>
    <string name="text_agriculture">三农</string>
    <string name="text_literature">文学</string>
    <string name="text_leisure">休闲</string>
    <string name="text_life">生活</string>
    <string name="text_amusement">娱乐</string>
    <string name="text_fashion">时尚</string>
    <string name="text_sport">体育</string>
    <string name="text_society">社会</string>
    <string name="text_anime">二次元</string>
    <string name="text_other">其他</string>

</resources>