<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage_fragment"
        android:icon="@drawable/ic_homepage"
        android:title="@string/navigation_title_homepage" />

    <item
        android:id="@+id/classification_fragment"
        android:icon="@drawable/ic_classification"
        android:title="@string/navigation_title_classification" />

    <item
        android:id="@+id/menu_item_upload"
        android:icon="@android:drawable/ic_input_add"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/local_download_fragment"
        android:icon="@drawable/ic_web_view"
        android:title="@string/navigation_title_web_view" />

    <item
        android:id="@+id/user_center_fragment"
        android:icon="@drawable/ic_user_center"
        android:title="@string/navigation_title_user_center" />

</menu>