<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/upload_doc_name"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/user_name_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:gravity="center_vertical"
        android:text="@string/text_enter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:gravity="center_vertical"
        android:text="@string/text_choose_upload_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_doc_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="63dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="128dp"
        android:gravity="center_vertical"
        android:text="@string/navigation_title_classification"
        app:layout_constraintStart_toEndOf="@+id/upload_doc_classification"
        app:layout_constraintTop_toBottomOf="@+id/upload_doc_name" />

    <Spinner
        android:id="@+id/upload_doc_classification"
        android:layout_width="178dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:entries="@array/doc_classification"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/upload_doc_name" />
</androidx.constraintlayout.widget.ConstraintLayout>